# deferno-kmp

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  NOTICE  README.md  THIRD-PARTY-LICENSES  build.gradle.kts  codecov.yml  conveyor.conf  gradle.properties  settings.gradle.kts
.github/: pull_request_template.md
.github/workflows/: ci.yml  ios.yml  release.yml  testflight.yml
app/: build.gradle.kts  proguard-rules.pro
app/androidApp/: build.gradle.kts
app/desktopApp/: build.gradle.kts
app/iosApp/: ExportOptions.plist  Local.xcconfig  Podfile  README.md  build.gradle.kts
app/macosApp/: .gitignore  Podfile  README.md  build.gradle.kts  build.sh  project.yml
app/shared-l10n/: Localizable.xcstrings  l10n-parity-overrides.txt
app/shell/: build.gradle.kts
baselineprofile/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
contracts/: CONTRACT-NOTES.md  README.md  openapi-0.1.json  refresh.sh
contracts/fixtures/: README.md  auth-me.json  error-404.json  items-sample.json  plan.json  settings.json  tasks-sample.json  today-sample.json
contracts/sidecar/: protocol-v1.md
core/agent/: build.gradle.kts
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/designsystem/: build.gradle.kts
core/di/: build.gradle.kts
core/domain/: build.gradle.kts
core/model/: build.gradle.kts
core/network/: build.gradle.kts
core/scopes/: build.gradle.kts
core/secure/: build.gradle.kts
core/sidecar/: build.gradle.kts
core/speech/: build.gradle.kts
docs/: RELEASING.md  design-principles.md
docs/adr/: 0001-offline-first-local-source-of-truth-outbox.md  0002-account-hard-isolation-org-filter.md  0003-kmp-shared-presentation-native-ui.md  0004-module-structure-nia-hybrid.md  0005-api-version-handling.md  0006-testing-strategy.md  0007-adaptive-multipane-command-registry.md  0008-multi-window-stage-manager-deferred.md  0009-security-privacy-posture.md  0010-client-design-system-touch-first.md  0011-api-dto-modelling-condense-at-edge.md  0012-native-auth-pat-credential.md  0013-navigation-shell-destinations.md  0014-di-scope-placement-data-layer.md  0015-v1-navigation-surface-deferred-destinations.md  0016-create-online-only-v1.md  0017-shared-app-shell-module-per-platform-views.md  0018-on-device-stt-portable-whisper-baseline-native-fast-paths.md  0019-whisper-model-distribution-platform-asset-delivery.md  0020-apache-2-open-source-client-license.md  0021-desktop-release-and-self-update-conveyor-github-releases.md  0022-sqldelight-versioned-migrations.md  0023-v1-signin-validate-and-store-pasted-pat.md  0024-macos-native-capabilities-launchd-swift-sidecar.md  0025-multi-os-sidecar-substrate-cross-os-transport.md  0026-native-browser-pkce-signin.md  0027-client-koog-agent-hosted-relay-propose-only.md  0027-client-koog-agent-premium-relay-propose-only.md  0028-per-platform-view-bodies-duplicated.md  0029-native-macos-swiftui-app-real-macos-target.md  0030-plan-task-detail-tier-3-drill-down-not-overlay.md  0031-one-shell-computed-chromespec-top-bar.md  0032-top-bar-create-affordances-stay-overlay-intents.md  0033-macos-detached-task-detail-windows.md  0034-offline-first-create-client-supplied-uuids.md  0034-tasks-item-tree-modal-move.md  0035-android-edge-to-edge-component-owned-insets.md  (+12 more)
gradle/: libs.versions.toml
shacl-floor/: .gitignore  build.gradle.kts
speech-model-pack/: build.gradle.kts
speech-whisper-jni/: build.gradle.kts
speech-whisper-jni/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
(+1153 files in other folders)
